[workspace]
members = [
    "nannou_derive",
    "nannou_draw",
    "nannou_isf",
    "nannou_midi",
    "nannou_video",
    "nannou_webcam",
    "examples",
    "generative_design",
    "guide/book_tests",
    "nannou",
    "nannou_audio",
    "nannou_core",
    "nannou_laser",
    "nannou_osc",
    "nannou_wgpu",
    "nature_of_code",
    "scripts/run_all_examples",
    "scripts/set_version",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
version = "0.1.0"
homepage = "https://nannou.cc"
repository = "https://github.com/nannou-org/nannou.git"

[workspace.dependencies]
audrey = "0.3"
bevy = { version = "0.19.0-rc.2", default-features = false }
# Pinned to the Bevy 0.19 release candidates while we wait for the stable
# release. Tracked for a switch back to stable in #TODO (RC -> stable).
bevy_common_assets = "0.17.0-rc1"
bevy_egui = "0.40.0-rc.1"
# `bevy-inspector-egui` has no Bevy 0.19 release yet. Re-enable it (and the
# `inspector` feature + `inspector_ui` example) once one lands - see the
# RC -> stable tracking issue (#TODO).
#bevy-inspector-egui = "0.35"
bitflags = "2.9"
bytemuck = "1.22"
crossbeam-channel = "0.5"
cpal = "0.13"
dasp_sample = "0.11"
ether-dream = "~0.2.5"
evalexpr = "12"
find_folder = "0.3"
flume = "0.11"
futures = "0.3"
glam = { version = "0.32",  default-features = false }
hound = "3.4"
hrtf = "0.8"
ilda-idtf = "0.1"
image = { version = "0.25", default-features = false }
isf = "0.1.0"
lasy = "0.4"
lyon = "1.0"
midir = "0.10"
nokhwa = { version = "0.10", features = ["input-native", "camera-sync-impl"] }
noise = "0.9"
notosans = "0.1"
num-traits = {version = "0.2", default-features = false }
parley = { version = "0.7.0", default-features = false, features = ["std", "system"] }
pennereq = "0.3"
quote = "1"
rand = {version = "0.9.0", default-features = false }
rayon = "1.10"
ringbuf = "0.4"
rosc = "0.11"
skrifa = "0.37.0"
semver = "1"
serde = "1"
serde_json = "1"
serde_yaml = "0.9"
syn = "1"
thiserror = "2"
tempfile = "3"
tokio = "1"
toml = "0.8"
toml_edit = "0.22"
usvg = "0.4"
uuid = "1.8"
video-rs = "0.11"
walkdir = "2"
wasm-bindgen = "0.2"
web-sys = "0.3"
console_error_panic_hook = "0.1"
getrandom = { version = "0.3", default-features = false }
wgpu = "29"
wikipedia = "0.5"
