[workspace]
members = [
    "nannou_derive",
    "nannou_draw",
    "nannou_isf",
    "nannou_midi",
    "nannou_video",
    "nannou_webcam",
    "examples",
    "generative_design",
    "guide/book_tests",
    "nannou",
    "nannou_audio",
    "nannou_core",
    "nannou_laser",
    "nannou_osc",
    "nannou_wgpu",
    "nature_of_code",
    "scripts/run_all_examples",
    "scripts/set_version", "scripts/tui_example_browser",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
# The single source of truth for the version of every published nannou crate.
# All `nannou*` crates inherit this via `version.workspace = true` and are
# released in lockstep. Bump it with `cargo run --bin set_version -- "X.Y.Z"`.
version = "0.20.0"
homepage = "https://nannou.cc"
repository = "https://github.com/nannou-org/nannou.git"

[workspace.dependencies]
audrey = "0.3"
bevy = { version = "0.19.0", default-features = false }
bevy_egui = "0.40.0"
# `bevy-inspector-egui` has no Bevy 0.19 release yet. Re-enable it (and the
# `inspector` feature + `inspector_ui` example) once one lands.
#bevy-inspector-egui = "0.35"
bitflags = "2.9"
bytemuck = "1.22"
crossbeam-channel = "0.5"
cpal = "0.18"
dasp_sample = "0.11"
ether-dream = "~0.2.5"
evalexpr = "13"
find_folder = "0.3"
flume = "0.12"
futures = "0.3"
glam = { version = "0.32",  default-features = false }
hound = "3.4"
hrtf = "0.8"
ilda-idtf = "0.1"
image = { version = "0.25", default-features = false }
isf = "0.1.0"
lasy = "0.4"
lyon = "1.0"
midir = "0.11"
nokhwa = { version = "0.10", features = ["input-native", "camera-sync-impl"] }
noise = "0.9"
notosans = "0.1"
num-traits = {version = "0.2", default-features = false }
# Kept in lockstep with the `parley` version used by `bevy_text` so that the
# font database can be shared. System font discovery is feature-gated via
# `nannou_draw/system_font_discovery`.
parley = { version = "0.9.0", default-features = false, features = ["std"] }
pennereq = "0.3"
quote = "1"
rand = {version = "0.10", default-features = false }
rayon = "1.10"
ringbuf = "0.5"
rosc = "0.11"
skrifa = "0.42"
semver = "1"
serde = "1"
serde_json = "1"
serde_yaml = "0.9"
# Must semver-unify with `bevy_text`'s `swash` dependency: glyph rasterisation
# goes through bevy's `ScaleCx` resource, whose types must match.
swash = { version = "0.2.6", default-features = false, features = ["std", "scale"] }
syn = "2"
thiserror = "2"
tempfile = "3"
tokio = "1"
toml = "1"
toml_edit = "0.25"
usvg = "0.47"
uuid = "1.8"
video-rs = "0.11"
walkdir = "2"
wasm-bindgen = "0.2"
web-sys = "0.3"
console_error_panic_hook = "0.1"
getrandom = { version = "0.4", default-features = false }
wgpu = "29"
wikipedia = "0.5"

# Internal nannou crates. Each carries both a `version` (required so dependent
# crates publish correctly) and a `path` (used for local development). Members
# reference them via `{ workspace = true }`, so these version requirements live
# in one place and `set_version` bumps them in lockstep with
# `workspace.package.version`.
nannou = { version = "0.20.0", path = "nannou" }
nannou_audio = { version = "0.20.0", path = "nannou_audio" }
nannou_core = { version = "0.20.0", path = "nannou_core" }
nannou_derive = { version = "0.20.0", path = "nannou_derive" }
nannou_draw = { version = "0.20.0", path = "nannou_draw" }
nannou_laser = { version = "0.20.0", path = "nannou_laser" }
nannou_osc = { version = "0.20.0", path = "nannou_osc" }
nannou_video = { version = "0.20.0", path = "nannou_video" }
nannou_wgpu = { version = "0.20.0", path = "nannou_wgpu" }
