[package]
name = "bevy_nannou"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true, features = ["jpeg"]}
bevy_nannou_derive = { path = "../bevy_nannou_derive" }
bevy_nannou_draw = { path = "../bevy_nannou_draw" }
bevy_nannou_isf = { path = "../bevy_nannou_isf", optional = true }
bevy_nannou_video = { path = "../bevy_nannou_video", optional = true }

[features]
nightly = ["bevy_nannou_draw/nightly"]
isf = ["bevy_nannou_isf"]
video = ["bevy_nannou_video"]