[package]
name = "bevy_nannou_draw"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
lyon = "1.0"
nannou_core = { path = "../nannou_core" }
notosans = { version = "0.1", optional = true }
rusttype = { version = "0.8", features = ["gpu_cache"] }
rayon = { workspace = true }
uuid = "1.8"
bitflags = "2.6.0"

[features]
nightly = []
notosans = ["dep:notosans"]
