[package]
name = "examples"
version = "0.1.0"
authors = [
    "mitchmindtree <mitchell.nordine@gmail.com>",
    "JoshuaBatty <joshpbatty@gmail.com>",
]
description = "A suite examples for nannou, the creative coding framework."
readme = "README.md"
keywords = ["creative", "sketch", "graphics", "audio", "example"]
license = "MIT"
repository = "https://github.com/nannou-org/nannou.git"
homepage = "https://github.com/nannou-org/nannou"
edition = "2018"

[dev-dependencies]
audrey = "0.3"
hotglsl = "0.2"
hrtf = "0.2"
nannou = { version ="0.19.0", path = "../nannou" }
nannou_audio = { version ="0.19.0", path = "../nannou_audio" }
nannou_laser = { version ="0.19.0", features = ["ffi", "ilda-idtf"], path = "../nannou_laser" }
nannou_osc = { version ="0.19.0", path = "../nannou_osc" }
pitch_calc = { version = "0.12", features = ["serde"] }
time_calc = { version= "0.13", features = ["serde"] }
walkdir = "2"
hound = "3.4.0"
ringbuf = "0.2.2"
futures = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"]}
[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1", features = ["rt"]}

[features]
egui = ["nannou/egui"]
isf = ["nannou/isf"]

# Audio
[[example]]
name = "hrtf-noise"
path = "audio/hrtf-noise.rs"
[[example]]
name = "simple_audio"
path = "audio/simple_audio.rs"
[[example]]
name = "simple_audio_file"
path = "audio/simple_audio_file.rs"
[[example]]
name = "record_wav"
path = "audio/record_wav.rs"
[[example]]
name = "feedback"
path = "audio/feedback.rs"

# Communication
[[example]]
name = "osc_receiver"
path = "communication/osc_receiver.rs"
[[example]]
name = "osc_sender"
path = "communication/osc_sender.rs"

# Draw
[[example]]
name = "draw"
path = "draw/draw.rs"
[[example]]
name = "draw_arrow"
path = "draw/draw_arrow.rs"
[[example]]
name = "draw_blend"
path = "draw/draw_blend.rs"
[[example]]
name = "draw_capture"
path = "draw/draw_capture.rs"
[[example]]
name = "draw_custom_material"
path = "draw/draw_custom_material.rs"
required-features = ["nannou/hot_reload"]
[[example]]
name = "draw_fragment_shader"
path = "draw/draw_fragment_shader.rs"
required-features = ["nannou/nightly", "nannou/hot_reload"]
[[example]]
name = "draw_loop"
path = "draw/draw_loop.rs"
[[example]]
name = "draw_material"
path = "draw/draw_material.rs"
[[example]]
name = "draw_material_bloom"
path = "draw/draw_material_bloom.rs"
[[example]]
name = "draw_mesh"
path = "draw/draw_mesh.rs"
[[example]]
name = "draw_polygon"
path = "draw/draw_polygon.rs"
[[example]]
name = "draw_polyline"
path = "draw/draw_polyline.rs"
[[example]]
name = "draw_text"
path = "draw/draw_text.rs"
[[example]]
name = "draw_text_path"
path = "draw/draw_text_path.rs"
[[example]]
name = "draw_texture"
path = "draw/draw_texture.rs"
[[example]]
name = "draw_texture_sampler"
path = "draw/draw_texture_sampler.rs"
[[example]]
name = "draw_textured_mesh"
path = "draw/draw_textured_mesh.rs"
[[example]]
name = "draw_textured_path"
path = "draw/draw_textured_path.rs"
[[example]]
name = "draw_textured_polygon"
path = "draw/draw_textured_polygon.rs"
[[example]]
name = "draw_transform"
path = "draw/draw_transform.rs"

# Isf
[[example]]
name = "isf_simple"
path = "isf/simple.rs"
required-features = ["isf", "egui"]

# Laser
[[example]]
name = "laser_ffi"
path = "laser/laser_ffi.rs"
[[example]]
name = "laser_frame_stream"
path = "laser/laser_frame_stream.rs"
[[example]]
name = "laser_frame_stream_gui"
path = "laser/laser_frame_stream_gui.rs"
required-features = ["egui"]
[[example]]
name = "laser_raw_stream"
path = "laser/laser_raw_stream.rs"
[[example]]
name = "laser_ilda_idtf"
path = "laser/laser_ilda_idtf.rs"

# Nannou Basics
[[example]]
name = "all_functions"
path = "nannou_basics/all_functions.rs"
[[example]]
name = "window_coordinates"
path = "nannou_basics/window_coordinates.rs"
[[example]]
name = "multi_window"
path = "nannou_basics/multi_window.rs"
[[example]]
name = "multi_window_draw"
path = "nannou_basics/multi_window_draw.rs"
[[example]]
name = "simple_window"
path = "nannou_basics/simple_window.rs"

# Offline
[[example]]
name = "offline_01"
path = "offline/tree.rs"

# Rust Basics
[[example]]
name = "1_nannou_events"
path = "rust_basics/1_nannou_events.rs"
[[example]]
name = "2_variables_window_console"
path = "rust_basics/2_variables_window_console.rs"
[[example]]
name = "3_variable_scope"
path = "rust_basics/3_variable_scope.rs"
[[example]]
name = "4_conditionals"
path = "rust_basics/4_conditionals.rs"
[[example]]
name = "5_loops"
path = "rust_basics/5_loops.rs"
[[example]]
name = "6_functions"
path = "rust_basics/6_functions.rs"
[[example]]
name = "7_modules"
path = "rust_basics/7_modules/7_modules.rs"

# Template
[[example]]
name = "template_app"
path = "templates/template_app.rs"
[[example]]
name = "template_sketch"
path = "templates/template_sketch.rs"

# User Interface
[[example]]
name = "circle_packing"
path = "ui/egui/circle_packing.rs"
required-features = ["egui"]
[[example]]
name = "tune_color"
path = "ui/egui/tune_color.rs"
required-features = ["egui"]
[[example]]
name = "simple_ui"
path = "ui/egui/simple_ui.rs"
required-features = ["egui"]
[[example]]
name = "inspector_ui"
path = "ui/egui/inspector_ui.rs"
required-features = ["egui"]