[package]
name = "nannou_audio"
version ="0.19.0"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
description = "The audio API for Nannou, the creative coding framework."
readme = "README.md"
keywords = ["audio", "stream", "cross-platform", "dsp", "pcm"]
license = "MIT"
repository = "https://github.com/nannou-org/nannou_audio.git"
homepage = "https://nannou.cc"
edition = "2018"

[dependencies]
cpal = "0.13.1"
dasp_sample = "0.11.0"
thiserror = "1"

[features]
asio = ["cpal/asio"]
