[package]
name = "nannou_audio"
version ="0.19.0"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
description = "The audio API for Nannou, the creative coding framework."
readme = "README.md"
keywords = ["audio", "stream", "cross-platform", "dsp", "pcm"]
repository = "https://github.com/nannou-org/nannou_audio.git"
homepage = "https://nannou.cc"
license.workspace = true
edition.workspace = true

[dependencies]
cpal.workspace = true
dasp_sample.workspace = true
thiserror.workspace = true

[features]
asio = ["cpal/asio"]
